chassis texture generation
